--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -17,3 +17,9 @@ en:
 
   titles:
     application: Paper
+
+  helpers:
+    submit:
+      notes:
+        create: 'Create'
+        update: 'Update'
